// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calc-methods getCalcMethodByName returns method if found 1`] = `
{
  "label": "Egyptian General Authority of Survey",
  "name": "Egypt",
  "values": {
    "fajr": 19.5,
    "isha": 17.5,
  },
}
`;

exports[`calc-methods getCalcMethods returns all methods 1`] = `
[
  {
    "label": "Islamic Society of North America (ISNA)",
    "name": "ISNA",
    "values": {
      "fajr": 15,
      "isha": 15,
    },
  },
  {
    "label": "Muslim World League",
    "name": "MWL",
    "values": {
      "fajr": 18,
      "isha": 17,
    },
  },
  {
    "label": "Presidency of Religious Affairs, Türkiye",
    "name": "turkey-presidency-of-religious-affairs",
    "values": {
      "fajr": 18,
      "isha": 17,
    },
  },
  {
    "label": "University of Islamic Sciences, Karachi",
    "name": "Karachi",
    "values": {
      "fajr": 18,
      "isha": 18,
    },
  },
  {
    "label": "Umm Al-Qura University, Makkah",
    "name": "Makkah",
    "values": {
      "fajr": 18.5,
      "isha": "90min",
    },
  },
  {
    "label": "Egyptian General Authority of Survey",
    "name": "Egypt",
    "values": {
      "fajr": 19.5,
      "isha": 17.5,
    },
  },
  {
    "label": "Institute of Geophysics, University of Tehran",
    "name": "Tehran",
    "values": {
      "fajr": 17.7,
      "isha": 14,
      "maghrib": 4.5,
      "midnight": "Jafari",
    },
  },
  {
    "label": "Shia Ithna-Ashari, Leva Institute, Qum",
    "name": "Jafari",
    "values": {
      "fajr": 16,
      "isha": 14,
      "maghrib": 4,
      "midnight": "Jafari",
    },
  },
  {
    "label": "Union des Organisations Islamiques de France",
    "name": "union-des-organisations-islamiques-de-france",
    "values": {
      "fajr": 12,
      "isha": 12,
    },
  },
  {
    "label": "France 15 degree",
    "name": "france-15-degree",
    "values": {
      "fajr": 15,
      "isha": 15,
    },
  },
  {
    "label": "France 18 degree",
    "name": "france-18-degree",
    "values": {
      "fajr": 18,
      "isha": 18,
    },
  },
  {
    "label": "The Central Spiritual Administration of Muslims of Russia",
    "name": "russia",
    "values": {
      "fajr": 16,
      "isha": 15,
    },
  },
  {
    "label": "General Authority of Islamic Affairs and Endowments (GAIAE) of UAE",
    "name": "gaiae",
    "values": {
      "fajr": 18,
      "isha": 17.5,
    },
  },
  {
    "hidden": true,
    "label": "London Unified Prayer Times (Slightly Inaccurate)",
    "name": "london-unified",
    "values": {
      "fajr": 12.2,
      "isha": 9.2,
    },
  },
]
`;

exports[`calc-methods getCalcMethods returns all methods: values for Egypt 1`] = `
{
  "fajr": 19.5,
  "isha": 17.5,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for ISNA 1`] = `
{
  "fajr": 15,
  "isha": 15,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for Jafari 1`] = `
{
  "fajr": 16,
  "isha": 14,
  "maghrib": 4,
  "midnight": "Jafari",
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for Karachi 1`] = `
{
  "fajr": 18,
  "isha": 18,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for MWL 1`] = `
{
  "fajr": 18,
  "isha": 17,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for Makkah 1`] = `
{
  "fajr": 18.5,
  "isha": "90min",
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for Tehran 1`] = `
{
  "fajr": 17.7,
  "isha": 14,
  "maghrib": 4.5,
  "midnight": "Jafari",
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for france-15-degree 1`] = `
{
  "fajr": 15,
  "isha": 15,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for france-18-degree 1`] = `
{
  "fajr": 18,
  "isha": 18,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for gaiae 1`] = `
{
  "fajr": 18,
  "isha": 17.5,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for london-unified 1`] = `
{
  "fajr": 12.2,
  "isha": 9.2,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for russia 1`] = `
{
  "fajr": 16,
  "isha": 15,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for turkey-presidency-of-religious-affairs 1`] = `
{
  "fajr": 18,
  "isha": 17,
}
`;

exports[`calc-methods getCalcMethods returns all methods: values for union-des-organisations-islamiques-de-france 1`] = `
{
  "fajr": 12,
  "isha": 12,
}
`;

exports[`calc-methods getJuristicMethods returns all asr methods 1`] = `
[
  {
    "label": "Shafii, Maliki, Jafari & Hanbali",
    "name": "Standard",
  },
  {
    "label": "Hanafi",
    "name": "Hanafi",
  },
]
`;
